Version 1.5.1: starting work over SVS support